--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
@@ -18,6 +20,7 @@
     "expo-asset": "^11.0.5",
     "expo-av": "^13.10.0",
     "expo-file-system": "^18.0.12",
+    "expo-linear-gradient": "^14.0.2",
     "expo-modules-core": "^2.2.3",
     "expo-permissions": "^14.4.0",
     "openai": "^4.91.0",
@@ -32,19 +35,24 @@
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
     "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.8.1",
     "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-typescript": "^7.27.0",
     "@babel/preset-env": "^7.20.0",
+    "@babel/preset-typescript": "^7.27.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.20",
+    "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
@@ -53,7 +61,7 @@
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
